--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
           background: url(/images/icon_social.png);
           text-align: right;
         }
+  
         header .sns a.youtube{
           width: 18px;
           height: 13px;
@@ -409,11 +410,14 @@
           font-size: 12px;
           color: #2b2b2b;
           font-family: 'Roboto', sans-serif;
+          font-weight: bold;
+          color: #fff;
           opacity: 0;
           transition: all 0.5s ease;
           -webkit-transition: all 0.5s ease;
           -moz-transition: all 0.5s ease;  
         }
+        header .sns a:hover span{ position:absolute;right:30px;opacity:1}
 
         header .project{
           position: fixed;
@@ -641,8 +645,8 @@
           },
           {
             title: "타이틀 5번입니다.",
-            desc: [ "desc제목5", "WEBSITE / MOBILESITE" ],
-            date:"2018.09.14",
+            desc: [ "desc제목5", "WEBSITE / MOBILESITE" ], 
+            date:"2018.09.14", 
           },
         ];
         
